deployment-helloworld.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    name: deployment-hello-world
spec:
    replicas: 2
    template:
        metadata:
            labels:
                app: deployment-hello-world
        spec:
            containers:
            - name: hello-world
              image: gcr.io/google-samples/node-hello:1.0
              ports:
              - containerPort: 8080
