service-hello-world.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployment-hello-world
  name: my-service
  namespace: default
spec:
  selector:
    app: deployment-hello-world
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
