ingress-hello-node.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-node-ingress
spec:
  backend:
    serviceName: hello-node
    servicePort: 5679
