ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: hello-node
          servicePort: 5679
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 8080
