ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-my-service
spec:
  backend:
    serviceName: my-service
    servicePort: 8080
